tidy logging, high stats confirms groupvel fix, investigate 2/1M pflags truncation mismatch and large seqmat mismatch following move to post recording

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -183,6 +183,7 @@ set(SOURCES
     CGunSource.cc
     CTorchSource.cc
 
+    CEventAction.cc
     CSteppingAction.cc
     CTrackingAction.cc
     CStage.cc
@@ -264,6 +265,7 @@ set(HEADERS
     CGunSource.hh
     CTorchSource.hh
 
+    CEventAction.hh
     CSteppingAction.hh
     CTrackingAction.hh
     CStage.hh
