get tboolean-- operational again following changes to CSG partBuffer format with single node typecode for easier empty detection

--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -15,6 +15,8 @@ set(TEST_SOURCES
    PLOG_Test.cc 
    SYSRAP_LOG_Test.cc 
    SYSRAP_LOG_FileAppenderTest.cc
+
+   OpticksCSGTest.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
