moving from bash to python for authoring CSG test geometry, NCSG for Deserializing python written directories into C++ CSG trees

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -123,6 +123,8 @@ set(SOURCES
 
     PyMCubes/marchingcubes.cpp
     NMarchingCubesNPY.cpp
+
+    NCSG.cpp
 )
 
 set(REST_SOURCES
@@ -179,6 +181,7 @@ NSensorList.hpp
 NSlice.hpp
 NSequence.hpp
 NSphere.hpp
+NNode.hpp
 NPlane.hpp
 NQuad.hpp
 NPart.hpp
@@ -198,6 +201,7 @@ Parameters.hpp
 
 PyMCubes/marchingcubes.hpp
 NMarchingCubesNPY.hpp
+NCSG.hpp
 
 )
 
