--- a/opticksnpy/tests/CMakeLists.txt
+++ b/opticksnpy/tests/CMakeLists.txt
@@ -73,13 +73,15 @@ NGrid3Test.cc
 NField3Test.cc
 NFieldGrid3Test.cc
 NTreeToolsTest.cc
-NConstructorTest.cc
+
+NGLMStreamTest.cc
 
 )
 
 set(_TEST_SOURCES
 
 SequenceNPYTest.cc
+NConstructorTest.cc
 
 )
 
