transform handling in nnode tree done at primitive level using transforms collected from ancestors, honour the gtransform in the SDF operators of nbox and nsphere

--- a/opticksnpy/tests/CMakeLists.txt
+++ b/opticksnpy/tests/CMakeLists.txt
@@ -42,7 +42,10 @@ NQuadTest.cc
 NBoundingBoxTest.cc
 NPartTest.cc
 NSpectralTest.cc
+
 NSphereTest.cc
+NBoxTest.cc
+
 NTesselateTest.cc
 G4StepNPYTest.cc
 _TorchStepNPYTest.cc
