conclude polygonization fails are a limitation of current poly techniques, need new approach to work with thin volumes

--- a/opticksnpy/tests/CMakeLists.txt
+++ b/opticksnpy/tests/CMakeLists.txt
@@ -75,6 +75,7 @@ DummyPhotonsNPYTest.cc
 NMarchingCubesNPYTest.cc
 NCSGTest.cc
 NCSGLoadTest.cc
+NCSGScanTest.cc
 NOctNodeTest.cc
 
 NDualContouringSampleTest.cc
