NCSG auto-sizing container volume so tboolean-gdml can work with general subtree selections

--- a/opticksnpy/tests/CMakeLists.txt
+++ b/opticksnpy/tests/CMakeLists.txt
@@ -76,6 +76,8 @@ NMarchingCubesNPYTest.cc
 NCSGTest.cc
 NCSGLoadTest.cc
 NCSGScanTest.cc
+NCSGDeserializeTest.cc
+
 NOctNodeTest.cc
 
 NDualContouringSampleTest.cc
