start on full analytic geometry route going from NScene into GScene, needs GNode/GSolid tree to sprung out of the NScene

--- a/ggeo/CMakeLists.txt
+++ b/ggeo/CMakeLists.txt
@@ -109,7 +109,10 @@ set(SOURCES
     GMaker.cc
     GBBoxMesh.cc
     GColorizer.cc
+
     GTreeCheck.cc
+    GScene.cc
+
     GTraverse.cc
     GMergedMesh.cc
     GGeo.cc
