openmesh composite adaptive subdiv attempt at sqrt3 just hangs, add hexpatch mesh handy for manual subdiv tests

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -186,6 +186,7 @@ set(SOURCES
     NOpenMesh.cpp
     NOpenMeshDesc.cpp
     NOpenMeshBoundary.cpp
+    NOpenMeshSubdiv.cpp
 
     NHybridMesher.cpp
     Nuv.cpp
