take sledgehammer to NOpenMesh monolith splitting into NOpenMeshProp,Find,Build,Desc,Subdiv

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -187,6 +187,9 @@ set(SOURCES
     NOpenMeshDesc.cpp
     NOpenMeshBoundary.cpp
     NOpenMeshSubdiv.cpp
+    NOpenMeshFind.cpp
+    NOpenMeshProp.cpp
+    NOpenMeshBuild.cpp
 
     NHybridMesher.cpp
     Nuv.cpp
