attempt at phased subdiv, all splits then all flips runs into flip confusion issue, get wrong edges when a flip lands on prior flipped : so back to contiguous and working out how to arrive at a contiguous face traverse

--- a/opticksnpy/tests/CMakeLists.txt
+++ b/opticksnpy/tests/CMakeLists.txt
@@ -113,6 +113,8 @@ NYMathTest.cc
 NYShapeTest.cc
 
 NOpenMeshTest.cc
+NOpenMeshCfgTest.cc
+NOpenMeshFindTest.cc
 NOpenMeshCombineTest.cc
 NPolygonizerTest.cc
 NCSGBSPTest.cc
