decide to proceed regardless despite subdiv problems, forming a zippering approach

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -13,6 +13,9 @@ find_package(PLog REQUIRED)
 
 find_package(OpenMesh REQUIRED)
 
+message("NPY.OpenMesh_LIBRARIES :${OpenMesh_LIBRARIES} ")
+
+
 #find_package(NonExisting) 
 #message("NPY.NonExisting_FOUND       :${NonExisting_FOUND} ")
 #message("NPY.NonExisting_INCLUDE_DIRS:${NonExisting_INCLUDE_DIRS} ")
@@ -199,6 +202,8 @@ set(SOURCES
 
     NHybridMesher.cpp
     Nuv.cpp
+
+    BoundarySnappingT.cc
 
 )
 
