bisection SDF other root finding along frontier crossing edges to determine ring of frontier interface points

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -197,6 +197,8 @@ set(SOURCES
     NOpenMeshBuild.cpp
     NOpenMeshEnum.cpp
     NOpenMeshCfg.cpp
+    NOpenMeshBisect.cpp
+    NOpenMeshZipper.cpp
 
     NCSGBSP.cpp
 
