NPlaneFromPoints for azimuthal differencing to allow sensible ordering of points around the frontier

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -200,6 +200,8 @@ set(SOURCES
     NOpenMeshBisect.cpp
     NOpenMeshZipper.cpp
 
+    NPlaneFromPoints.cpp
+
     NCSGBSP.cpp
 
     NHybridMesher.cpp
