getting opticks-t passes up to 91% :  15/163 fails

--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -37,6 +37,8 @@ set(TEST_SOURCES
     GTreePresentTest.cc
     GCSGTest.cc
     GPartsTest.cc
+    GGeoNCSGTest.cc
+
     GPmtTest.cc
 
     BoundariesNPYTest.cc
