NScanTest not outside issue fixed via minimum absolute cage delta, all the approx 10 odd crossings CSG trees are cy/cy or cy/co unions in need of uncoincidence nudges

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -143,7 +143,9 @@ set(SOURCES
     NScanLine.cpp
 
     NNode.cpp
+    NNodeEnum.cpp
     NNodeDump.cpp
+    NNodeUncoincide.cpp
 
     NBox.cpp
     NSlab.cpp
